Abstract DynamicCatalogManagerBase